fixed scrollbar appearing on right side bar

--- a/src/containers/right/Right.module.css
+++ b/src/containers/right/Right.module.css
@@ -5,13 +5,13 @@
   -webkit-backdrop-filter: blur(1rem);
 }
 
-.section__right::-webkit-scrollbar {
+.section__right::-webkit-scrollbar,
+.section__right-container::-webkit-scrollbar {
   display: none;
 }
 
 .section__right-container {
   overflow-y: scroll;
-  scrollbar-width: none;
   margin: 2rem;
   height: 85vh;
 }
